fix thrust text align

--- a/styles.css
+++ b/styles.css
@@ -354,6 +354,7 @@ a {
         text-align: left;
         font-size: 14px;
         line-height: 1.4;
+        text-align: justify;
     }
     
     .thrustpublications > p {
